# ai_agent_llm

./: README.md
block_1/agent_tool_runtime/: pyproject.toml
block_1/agent_tool_runtime/src/agent_runtime/: __init__.py
block_1/agent_tool_runtime/src/agent_runtime/core/: __init__.py  errors.py  state.py  validation.py
block_1/agent_tool_runtime/src/agent_runtime/engine/: __init__.py  executor.py  permissions.py  runtime.py
block_1/agent_tool_runtime/src/agent_runtime/interfaces/: __init__.py  api.py  cli.py
block_1/agent_tool_runtime/src/agent_runtime/model/: __init__.py  fake.py
block_1/agent_tool_runtime/src/agent_runtime/observability/: __init__.py  events.py
block_1/agent_tool_runtime/src/agent_runtime/storage/: __init__.py  memory.py  sqlite.py
block_1/agent_tool_runtime/src/agent_runtime/tools/: __init__.py  builtin.py  registry.py
block_1/agent_tool_runtime/tests/: test_api.py  test_error_mapping.py  test_integration.py  test_limits.py  test_permissions.py  test_validation.py
block_2/mcp_tool_server/: pyproject.toml
block_2/mcp_tool_server/src/mcp_tool_server/: __init__.py  agent_integration.py  cli.py  client.py  contracts.py  errors.py  events.py  permissions.py  registry.py  server.py  tools.py  validation.py
block_2/mcp_tool_server/src/mcp_tool_server/core/: __init__.py  contracts.py  errors.py  events.py  permissions.py  validation.py
block_2/mcp_tool_server/src/mcp_tool_server/integration/: __init__.py  (+1 more)
block_2/mcp_tool_server/tests/: test_agent_integration.py  test_contracts.py  test_permissions.py  test_server_client.py
(+7 files in other folders)
